--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-      "start": "node index.js"
+        "start": "node index.js"
     },
     "dependencies": {
-      "axios": "^1.3.0",
-      "cors": "^2.8.5",
-      "express": "^4.18.2"
+        "axios": "^1.3.0",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "mongoose": "^8.7.3",
+        "dotenv": "^16.0.0"
     }
-  }
-  
+}
