--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dependencies": {
         "axios": "^1.3.0",
         "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
         "express": "^4.18.2",
         "mongoose": "^8.7.3",
-        "dotenv": "^16.0.0"
+        "node-cron": "^3.0.3"
     }
 }
